Bug 937878 - Don't let too many ContentHostIncremental updates queue up. r=nrc